<resources>
    <string name="app_name">Big Family</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="v_e_r_s_i_o_n_1_0">v e r s i o n 1 . 0</string>
    <string name="logo">logo</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="heroes_name">title</string>
    <string name="detail">Detail</string>

    <string name="status">Status : </string>
    <string name="give_some_flower">
        click flower to\n
        Give Some Flower</string>
    <string name="_17">17</string>
    <string name="_04">04</string>
    <string name="_2002">2002</string>
    <string name="years">Years</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="copyright_2020">Copyright 2020</string>
    <string name="hobi">Hobi :</string>
    <string name="lari_pagi">Lari Pagi</string>
    <string name="cita_cita">Cita - Cita :</string>
    <string name="masuk_surga">Masuk Surga</string>
    <string name="dani">Beware of Ebola EpidemicRecently, Ebola epidemic that attacks the West African region, causing the world’s attention. WHO has released the data, there are at least 800 people who died after the Ebola virus. This disease has a very high mortality rate, 90 percent of patients died. Unfortunately, vaccine or drug to cure Ebola still haven’t found yet.

The Ebola virus was first discovered in Africa in 1976. Originally, the virus only attacks primates such as monkeys and apes. But now, it has evolved into dangerous disease because the ebola is transmitted to humans. This year, the Ebola virus is raging, the number of deaths has been increased two times more than in 1976, reported by BBC.com.

</string>
    <string name="_10">10</string>
    <string name="_06">06</string>
    <string name="_1974">1974</string>
    <string name="wiraswasta">Wiraswasta</string>
    <string name="mancing">Mancing</string>
    <string name="_07">07</string>
    <string name="_09">09</string>
    <string name="_2006">2006</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="bambang_eko_yulianto">Bambang Eko Yulianto</string>
    <string name="_1993">1993</string>
    <string name="_20">20</string>
    <string name="dito_rafie_harjanto">Dito Rafie Harjanto</string>
    <string name="ibnu">Ibnu</string>
    <string name="nurul_hidayah">Nurul Hidayah</string>
    <string name="_23">23</string>
    <string name="_2000">2000</string>
    <string name="lovinda_maylan">Lovinda Maylan</string>
    <string name="_2004">2004</string>
    <string name="dwi_ratna_desianti">Dwi Ratna Desianti</string>
    <string name="_12">12</string>
    <string name="_1994">1994</string>
    <string name="retno_yuda_iriani">Retno Yuda Iriani</string>
    <string name="jalan_jalan">Jalan - jalan</string>
    <string name="_1962">1962</string>
    <string name="siswa">Siswa</string>
    <string name="berenang">Berenang</string>
    <string name="_2012">2012</string>
    <string name="_2013">2013</string>
    <string name="zafira_arsy">Zafira Arsy</string>
    <string name="_2014">2014</string>
    <string name="belajar">Belajar</string>
    <string name="violinda_yulian">Violinda Yulian</string>
    <string name="_1997">1997</string>
    <string name="_21">21</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="muhammad_dani_ramadhan">Muhammad Dani Ramadhan</string>
    <string name="email">muhammaddanirhamadan@gmail.com</string>
</resources>
