<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="6dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/sam"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@drawable/yolan"
                    android:background="@color/yellow"
                    android:focusableInTouchMode="true"
                    android:contentDescription="@string/action_settings" />
                <TextView
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Yolanda Lovia Toscha Aprilia"
                    android:layout_toEndOf="@id/sam"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/baloo_da"
                    android:textColor="@android:color/black"/>
                <TableLayout
                    android:id="@+id/table"
                    android:layout_toEndOf="@id/sam"
                    android:layout_below="@id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="20dp">
                    <TableRow>
                        <TextView
                            android:text="@string/status"
                            android:layout_column="1"/>
                        <TextView
                            android:layout_weight="2"
                            android:text="@string/wiraswasta"
                            android:gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="10dp">
                        <TextView
                            android:text="@string/hobi"
                            android:layout_column="1"/>
                        <TextView
                            android:layout_weight="2"
                            android:text="@string/belajar"
                            android:gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginTop="10dp">
                        <TextView
                            android:text="@string/cita_cita"
                            android:layout_column="1"/>
                        <TextView
                            android:layout_weight="2"
                            android:text="@string/masuk_surga"
                            android:gravity="center"/>
                    </TableRow>
                </TableLayout>
                <TextView
                    android:layout_below="@id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/sam"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/give_some_flower"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/table"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/status"
                    android:focusable="true"
                    android:onClick="flower"
                    android:src="@drawable/flower" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
            <TableRow>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_21"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/baloo_da"
                        android:textSize="36sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/day"
                        android:fontFamily="@font/baloo_da"
                        android:layout_gravity="bottom"
                        android:gravity="center_horizontal"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    card_view:cardCornerRadius="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo_da"
                        android:gravity="center"
                        android:text="07"
                        android:textColor="@android:color/black"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:fontFamily="@font/baloo_da"
                        android:layout_gravity="bottom"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="10dp"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_1997"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/baloo_da"
                        android:textSize="36sp" />
                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/years"
                        android:fontFamily="@font/baloo_da"
                        android:layout_gravity="bottom" />
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textAlignment="center"
                android:fontFamily="@font/baloo_da"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dani"
                android:lineSpacingMultiplier="2"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>